<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Take Home Increment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="newbt1">New</string>
    <string name="vwincomename"> Annual Income(INR) </string>
    <string name="vwaftertaxname"> Income after tax </string>
    <string name="vwsalarypmname"> Salary Per Month</string>
    <string name="btchecksalaryname"> Check Salary after Tax</string>
    <string name="vwcategoryname">Category</string>
    <string name="vwassyearname">Assessment Year</string>
    <string name="vwdeductionsname">Total Deductions</string>
    <string name="vwincpercentname">Enter % Increment</string>
    <string name="vwsalaftincname">Salary after Increment</string>
    <string name="btincrementname">Check Increase</string>
    <string name="vwincomeincname"> Estimated Increase</string>
    <string name="btdeductionsname">Calculate Deductions</string>
    <string name="vwinvestmentname"> INVESTMENTS U/S 80C and 80CCC capped at Rs 1.50 Lakhs</string>
    <string name="vwotherdeductname"> Other Deductions</string>
    <string name="vwhraname"> HRA</string>
    <string name="vwincometaxname"> Income Tax</string>
    <string name="btinctxcalname"> INCOME TAX(2015&#8211;2016)</string>
    <string name="btchkincrementname"> ESTIMATE INCREMENT</string>
    <string name="bttakehomename"> ESTIMATE TAKEHOME</string>
    <string name="btsettingsname"> SETTINGS</string>
    <string name="vwtotalname"> Total Deductions</string>
    <string name="tvotaxname"> Tax You Pay </string>
    <string name="tvoincaftertaxname"> Net Income </string>
    <string name="tvodeductionsname">Total Deductions </string>
    <string name="tvoincomename"> Annual Income(INR)</string>
    <string name="btochecktaxname"> Check your Tax</string>
    <string name="tvocategoryname">Choose Category</string>
    <string name="vwincincomename"> Income Increase</string>
    <string name="vwsalaryafterincname"> Estimated Salary after Increase</string>
    <string name="viewafterinctaxinc"> Net Income after Tax</string>
    <string name="title_activity_calculate__incths"> Estimate your Increment</string>
    <string name="tvcalcinc">Lets try estimating your Salary Increment</string>
    <string name="btnextcalcname">Calculate Increment  </string>
    <string name="vwtminctaxname"> Tax you pay</string>
    <string name="btemailresultname">Email Results</string>
    <string name="tvemailaddname"> Email ID</string>
    <string name="hintemail"> Enter Your Email ID</string>
    <string name="btdeductname">Enter Deductions</string>
    <string name="tvodeductionsname1"> Enter the total Deductions if known, other wise click ***Enter Deductions*** below to identify and add up the deductions</string>
    <string name="vwnamehra">HRA Exemption</string>
    <string name="vwnamelta">LTA </string>
    <string name="vwnamemedbills">Medical Bills</string>
    <string name="vwnametel">Telephone and Broadband</string>
    <string name="vwnametrans">Transport Allowance</string>
    <string name="vwnamemedself">Mediclaim Policy</string>
    <string name="vwnamemedpar">Mediclaim Policy for Parents </string>
    <string name="vwnamehloan">House Loan </string>
    <string name="vwnamepf">Provident Fund </string>
    <string name="vwnameppf">PPF(GPF) </string>
    <string name="vwnamelic">LIC Premium </string>
    <string name="vwnameother80c">Other savings u/s 80C</string>
    <string name="vwnamequity">Rajiv Gandhi Equity Savings</string>
    <string name="vwnametotal">Other Deductions </string>
    <string name="bttotaldeductionname"> Total Deductions >> </string>
    <string name="vwnameotherdeduct">Other Deductions</string>
    <string name="tvsalincname"> Let\'s try to calculate how much your salary would be increased per month, based on the percentage of increment that may be offered to you. \n\nPlease Click on the button below to continue</string>
    <string name="vwnamegoback"> Go Back by clicking on the back button in your phone </string>
    <string name="ad_unit_id">ca-app-pub-7075526925707948/5365327513</string>
     <string name="ad_unit_id_inst">ca-app-pub-7075526925707948/6842060714</string>
    
    
    <string name="btsalincname"> Continue</string>
    <string name="stvbasicpayname"> Basic Salary/Month</string>
    <string name="stvtakehomename"> Net Salary</string>
    <string name="sbtochecktaxname"> Calculate Salary</string>
    <string name="sbtcalcincname"> Estimate Increment</string>
    <string name="sbtincname">+</string>
    <string name="sbtdecname">-</string>
    <string name="setincper">0</string>
    <string name="itvincrname">Increase %</string>
    <string name="tvocincomeincname">Est Annual Income </string>
    <string name="itvtakehomename">Take Home </string>
    <string name="itvoincomename">Annual Income(INR) </string>
    <string name="itvnamecurrent">Current Values </string>
    <string name="itvnamefuture">Estimated Values</string>
    <string name="sbtincrementname">Next Step</string>
    <string name="title_activity_increment">Calculator Increment</string>
    <string name="ettransname"></string>
    <string name="etmedbillsname">15000</string>
    <string name="dvwinstructionsname">Enter the Various deductions listed below, upon completion click **Total Deductions** to total the deductions and Press the Back button in your phone</string>
    <string name="itvdeductionsname"> Deductions</string>
    <string name="itvdeductionsincname"> Deductions</string>
    <string name="tvcheckincrement"> Estimate your Take Home after a hike</string>
    <string name="btcheckincname"> Check Increment</string>
    <string name="tventry">As a first step, let\'s calculate your salary, Please provide the information below and click on the "Calculate Salary" Button</string>

</resources>